# NetworkMonitor

./: .dockerignore  .gitignore  Dockerfile_builder  README.md  config.conf  docker-compose.yaml  example.env
.github/: test-cross-build.yml
.github/workflows/: rust.yml
common-data-model/: .dockerignore  Cargo.toml  README.md
common-data-model/src/: channel_names.rs  custom_traits.rs  data_models.rs  environment_variables.rs  lib.rs  mac_vendor_cache.rs  my_logger.rs  runtime_properties.rs
common-data-model/tests/: mac_vendor_cache_test.rs  test_serialization.rs
dashboard/: .dockerignore  .env.development  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css  main.tsx
dashboard/src/components/: DeviceTable.test.tsx  DeviceTable.tsx  Footer.test.tsx  Footer.tsx  Header.test.tsx  Header.tsx  LogEvents.tsx  NetworkMap.tsx  ServerStatistics.test.tsx  ServerStatistics.tsx  Settings.test.tsx  Settings.tsx
dashboard/src/components/__snapshots__/: DeviceTable.test.tsx.snap  Footer.test.tsx.snap  Header.test.tsx.snap  ServerStatistics.test.tsx.snap  Settings.test.tsx.snap
dashboard/src/components/handlers/: DeviceTableHandler.tsx  ServerStatisticsHandler.tsx
dashboard/src/components/metricWidgets/: NetworkWidget.tsx  TemperatureWidgets.tsx
dashboard/src/context/: MetricsContext.tsx
dashboard/src/data/: Constants.ts  initialDevices.ts
dashboard/src/hooks/: sendToKV.tsx  useMetrics.tsx  useNats.tsx  useReadFromKV.tsx
dashboard/src/interfaces/: Device.ts  DeviceWithKey.ts  DiscoveredHost.ts  Metrics.ts
dashboard/src/styles/: RouterStatisticsCSS.css
dashboard/src/utils/: UnitConverter.test.ts  UnitConverter.ts
db_replica/: .env  Cargo.toml  Dockerfile  README.md  schema.sql
db_replica/.sqlx/: query-c5dcd2b0cf1a6d5246b908701549d3abd32716b5adda4fc7ed8aed24a8841179.json  query-df95a5a32f4ec6047de8eb0a3be964e0874b5394199989ac54f116ff37ca3c3d.json
db_replica/src/: custom_traits.rs  db_handler.rs  main.rs  mod.rs  queue_listener.rs  test_custom_traits.rs
network-handler/: .dockerignore  Cargo.toml  Dockerfile  README.md
network-handler/src/: main.rs
network-handler/src/net_handler/: host_scanner.rs  mod.rs  port_scanner.rs  runtime_settings.rs
system_monitor/: Cargo.toml  Dockerfile
system_monitor/src/: cpu_usage.rs  disk_usage.rs  main.rs  mem_usage.rs  network_usage.rs  payload.rs  runtime_settings.rs  temperature_info.rs  unit_converter.rs
