[package]
name = "common-data-model"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.125"
env_logger = "0.11.5"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
serde_with = "3.9.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "postgres"] }
