[package]
name = "common-data-model"
version = "0.1.2"
edition = "2021"
keywords = ["datamodel", "network"]
license = "MIT OR Apache-2.0"
categories = ["data-structures", "database", "config"]
description = "Set of structs and traits for my network monitor system"
readme = "README.md"
repository = "https://github.com/albertjimenez/NetworkMonitor/tree/main/common-data-model"
exclude = ["tests", ".gitignore", ".dockerignore"]
[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
env_logger = "0.11.5"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
strsim = "0.11.1"
serde_with = "3.9.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "sqlx-macros", "sqlx-postgres", "macros"], default-features = false }
