[package]
name = "db_replica"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.0", features = [ "runtime-tokio", "postgres", "macros", "time", "chrono" ] }
common-data-model = {path = "../common-data-model"}
env_logger = "0.11.5"
num-traits = "0.2.19"
tokio = { version = "1.39.3", features = ["full" ] }
tokio-macros = "2.4.0"
dotenv = "0.15.0"
futures = "0.3.30"
async-nats = "0.35.1"
log = "0.4.22"