[package]
name = "db_replica"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "macros", "time", "chrono" ] }
common-data-model = "0.1.2"
env_logger = "0.11.5"
num-traits = "0.2.19"
tokio = { version = "1.40.0", features = ["full" ] }
tokio-macros = "2.4.0"
dotenv = "0.15.0"
futures = "0.3.30"
async-nats = "0.36.0"
log = "0.4.22"